--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 <i class="fas fa-check-double"></i> اختيار جميع الباقات
             </button>
 
-                  <a class="btn" id="" target="templates/quran_4.html">
+                  <a class="btn" id="" href="templates/quran_4.html">
                 <i class="fas fa-check-double"></i> تقدر تاخد فكره من هنا
                 
                   </a>
